[Glitch] Fix UI Overlap with the loupe icon in the Explore Tab
Port 9a567ec1d1fdb50573c882b7e454285ef7f4200c to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/search.scss
+++ b/app/javascript/flavours/glitch/styles/components/search.scss
@@ -45,7 +45,6 @@
     position: absolute;
     top: 16px;
     inset-inline-end: 10px;
-    z-index: 2;
     display: inline-block;
     opacity: 0;
     transition: all 100ms linear;
@@ -241,5 +240,6 @@
 
   &--compact &__item {
     padding: 10px;
+    padding-inline-end: 28px;
   }
 }
